--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,10 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+//AGREGADO POR EL CAMPUS. f- Incorporar en el archivo de build.gradle:
+jar {
+	manifest {
+		attributes 'TpApiApplication': 'Principal.TPAPI.TpApiApplication' // Reemplaza 'tu.paquete.MainClass' con la clase principal de tu aplicación
+	}
+}
